objects/vlocity_ins__QuoteLineItemGroupClass__c.object
<CustomObject>
    <description>The association of a Quote Line Item to Group Classes. Used for large group quoting process when multiple group classes are attributed on a single quote line item. Master-detail child object of GroupClass and Quote.</description>
    <fields>
        <fullName>vlocity_ins__GroupClassId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the group class for which the quote line item is defined.</description>
        <label>Group Class</label>
        <referenceTo>vlocity_ins__GroupClass__c</referenceTo>
        <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteId__c</fullName>
        <description>Id of the master quote. Additional field to maintain SaleForce visibility and security on the child object.</description>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Line Item Group Classes</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QuoteLineItemId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Id of the quote line item for which the group class is defined.</description>
        <label>Quote Line Item</label>
        <referenceTo>QuoteLineItem</referenceTo>
        <relationshipLabel>Quote Line Item Group Class</relationshipLabel>
        <relationshipName>QuoteLineItemGroupClasses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Quote Line Item Group Class</label>
    <nameField>
        <label>Quote Line Item Group Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line Item Group Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>